--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ body {
 }
 
 .section {
-  padding: 120px;
+  padding: 120px 0;
 }
 
 .list {
@@ -40,6 +40,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  height: 72px;
 }
 
 .logo {
