--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
   font-family: "Roboto", sans-serif;
   background-color: var(--white-color);
   color: var(--slate-color);
-  width: 1440px;
+  width: 90em;
   margin: 0 auto;
 }
 
@@ -112,11 +112,12 @@ body {
   color: var(--cloud-color);
   line-height: 1.5;
   letter-spacing: 0.32px;
-  width: 264px;
+  width: 16.5em;
 }
 
 .order-section {
   background-color: var(--navy-blue-color);
+  text-align: center;
 }
 
 .main-header {
@@ -125,7 +126,6 @@ body {
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 1.12px;
-  text-align: center;
 }
 
 .order-button {
@@ -137,7 +137,10 @@ body {
   line-height: 1.5;
   letter-spacing: 0.04em;
   cursor: pointer;
-  margin: auto;
+  padding: 16px 32px;
+  gap: 10px;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 .order-button:hover,
