third-section-layout

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,19 @@ ul {
   --third-heading-weight: 500;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .container {
   width: 1158px;
   margin: 0 auto;
@@ -193,6 +206,14 @@ ul {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   text-align: center;
+  margin-bottom: 72px;
+}
+
+.third-section-list {
+  display: flex;
+  gap: 24px;
+  flex-basis: calc((100% - 48px) / 3);
+  padding-bottom: 120px;
 }
 
 .team-section {
