--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,18 @@ h3,
 p,
 ul {
   margin: 0;
-  padding: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+button {
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
 }
 
 :root {
@@ -52,6 +63,8 @@ ul {
 
 .list {
   list-style-type: none;
+  margin: 0;
+  padding-left: 0;
 }
 
 .link {
@@ -60,7 +73,6 @@ ul {
 
 .page-header {
   border-bottom: 1px solid var(--CORNFLOWER, #e7e9fc);
-  height: 72px;
 }
 
 .header-layout {
@@ -128,7 +140,6 @@ ul {
 
 .footer-section {
   background-color: var(--navy-blue-color);
-  height: 312px;
 }
 
 .footer-note {
@@ -161,9 +172,7 @@ ul {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  cursor: pointer;
   padding: 16px 32px;
-  border-radius: 4px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
@@ -258,7 +267,6 @@ ul {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  cursor: pointer;
 }
 
 .filter-button:hover,
