--- a/css/styles.css
+++ b/css/styles.css
@@ -287,12 +287,22 @@ button {
     0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
 }
 
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  flex-basis: calc((100% - 48px) / 3);
+}
+
 .portfolio-header {
   color: var(--navy-blue-color);
   font-weight: var(--third-heading-weight);
   font-size: var(--third-heading-size);
   line-height: 1.2;
   letter-spacing: 0.02em;
+  padding: 32px 16px 0 16px;
+  border-left: 1px solid var(--cornflower-color);
+  border-right: 1px solid var(--cornflower-color);
 }
 
 .portfolio-paragraph {
@@ -300,4 +310,8 @@ button {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  padding: 8px 16px 32px 16px;
+  border-left: 1px solid var(--cornflower-color);
+  border-right: 1px solid var(--cornflower-color);
+  border-bottom: 1px solid var(--cornflower-color);
 }
