--- a/css/styles.css
+++ b/css/styles.css
@@ -160,7 +160,6 @@ button {
 
 .order-section {
   background-color: var(--navy-blue-color);
-  text-align: center;
   padding: 188px 0;
 }
 
@@ -170,8 +169,8 @@ button {
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 1.12px;
-  margin-bottom: 48px;
   max-width: 496px;
+  margin: 0 auto 48px;
 }
 
 .order-button {
@@ -186,6 +185,7 @@ button {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   display: block;
   min-width: 169px;
+  margin: 0 auto;
 }
 
 .order-button:hover,
